--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ build = "build.rs"
 [dependencies.sdl2]
 version = "0.34"
 default-features = false
+features = ["image"] 
+[dependencies]
+specs = "0.16.1"
